# NovaAI

novaai-be/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
novaai-be/app/: dependencies.py  main.py
novaai-be/app/api/: router.py
novaai-be/app/core/: config.py  exception_handlers.py  exceptions.py  logging.py
novaai-be/app/db/: supabase_client.py
novaai-be/app/models/: requests.py  responses.py
novaai-be/app/routes/: action_items.py  health.py  history.py
novaai-be/app/services/: action_item_service.py  date_normalizer.py  history_service.py
novaai-be/app/services/ai/: base.py  openai_errors.py  openai_provider.py  prompts.py
novaai-be/app/utils/: text.py
novaai-be/sample_transcripts/: complex.txt  curveball.txt  simple.txt
novaai-be/tests/: conftest.py  helpers.py  test_action_items.py  test_ai_extraction.py  test_health.py  test_openai_errors.py  test_priority_and_dates.py  test_transcript_validation.py  test_warnings.py
novaai-fe/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
novaai-fe/docs/: FRONTEND-UI.md
novaai-fe/src/: App.tsx  main.tsx
novaai-fe/src/api/: axios.ts  history.api.ts  index.ts  tracker.api.ts  transcript.api.ts
novaai-fe/src/constants/: index.ts  theme.ts
novaai-fe/src/contexts/: theme-context.ts
novaai-fe/src/hooks/: useTheme.ts
novaai-fe/src/layouts/: AppLayout.tsx
novaai-fe/src/lib/: motion.ts  query-client.ts
novaai-fe/src/mocks/: index.ts  tasks.ts  transcripts.ts
novaai-fe/src/pages/: index.ts
supabase/migrations/: 001_initial.sql
(+53 files in other folders)
